fixed final bug of texxt alignment in various mobile platform

--- a/tivo-1.0.0/css/styles.css
+++ b/tivo-1.0.0/css/styles.css
@@ -1104,7 +1104,7 @@ input[type='checkbox'] {
 
 .cards-2 .card .card-title {
 	margin-bottom: 0.5rem;
-	color: #5f4dee;
+	color: #47b2e4;
 	font: 700 1.125rem/1.5rem "Open Sans", sans-serif;
 }
 
